# bevy_xr_app

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  android-run.ps1
.cargo/: config
assets/scenes/: start.gltf  start.scn.ron
src/: controllers.rs  lib.rs  main.rs  scenes.rs
