[package]
name = "bevy_xr_app"
version = "0.1.0"
edition = "2021"

# Quest build is specified as an example because it must use crate-type =
# cdylib, and a crate can only have 1 lib.
[[example]]
name = "android"
crate-type = ["cdylib"]

[dependencies]
bevy = { git = "https://github.com/kcking/bevy", branch = "xr", default-features = false, features = [
    "xr",
    "bevy_openxr",

    "bevy_gilrs",
    "render",
    "png",
    "bevy_asset",
    "trace",
] }
bevy_editor_pls = { git = "https://github.com/kcking/bevy_editor_pls", optional = true }

[features]
default = ["editor", "simulator"]
editor = ["bevy_editor_pls"]
# Disable this feature when running on a PCVR headset
simulator = ["bevy/winit_loop", "bevy/openxr_simulator"]

# Optimize dependencies in debug build for acceptable performance.
[profile.dev.package."*"]
opt-level = 3


[patch.'crates-io']
# override bevy dependencies of other crates like bevy_editor_pls to use the xr
# fork
bevy = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_render = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_ecs = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_app = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_asset = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_core = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_hierarchy = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_log = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_math = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_reflect = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_utils = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_core_pipeline = { git = "https://github.com/kcking/bevy", branch = "xr" }
bevy_pbr = { git = "https://github.com/kcking/bevy", branch = "xr" }

[patch."https://github.com/aevyrie/bevy_mod_picking"]
bevy_mod_picking = { git = "https://github.com/kcking/bevy_mod_picking" }

[package.metadata.android]
apk_label = "Bevy XR Example"
package = "com.example.bevyxr"
assets = "assets"
res = "assets/android-res"
icon = "@mipmap/ic_launcher"
build_targets = ["aarch64-linux-android"]
runtime_libs = "libs"

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 29

[package.metadata.android.application]

[[package.metadata.android.application.meta_data]]
name = "com.samsung.android.vr.application.mode"
value = "vr_only"

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
    "android.intent.category.INFO",
]
